# atlas

./: .gitignore  LICENSE.md  README.md  cookiecutter.json
.github/workflows/: python-app.yml
hooks/: post_gen_project.py
{{cookiecutter.project_repo_name}}/: Makefile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt
{{cookiecutter.project_repo_name}}/docs/source/: conf.py  index.rst  modules.rst  {{cookiecutter.project_repo_name}}.rst  {{cookiecutter.project_repo_name}}.settings.rst
{{cookiecutter.project_repo_name}}/{{cookiecutter.project_repo_name}}/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_repo_name}}/{{cookiecutter.project_repo_name}}/settings/: base.py  dev.py  prod.py
