[tool.poetry]
name = "{{cookiecutter.project_repo_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.project_python_version}}"
Django = "^3.1.4"
python-decouple = "^3.4"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
isort = "^4.3"
sphinx = "^1.8"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
